# initiative

./: .gitignore  .mcp.json  LICENSE  README.md  initiative.db-shm  initiative.db-wal  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: add.md  clear.md  history.md  start.md  status.md  view.md
.claude/hooks/: post-complete-task.json  post-fail-task.json  post-get-next-task-empty.json  session-start.json  stop.json
.claude/skills/analyze/: SKILL.md
.claude/skills/initiative/: SKILL.md
commands/: stop.md
docs/plans/: 2026-02-27-initiative-design.md  2026-02-27-initiative-implementation.md
hooks/: hooks.json
skills/analyze/: SKILL.md
skills/initiative/: SKILL.md
src/initiative/: __init__.py  database.py  models.py  server.py
tests/: test_database.py  test_models.py  test_server.py
