[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "initiative"
version = "0.1.0"
description = "Autonomous AI task orchestration for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "anyio[trio]",
    "pytest-anyio",
]

[project.scripts]
initiative = "initiative.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/initiative"]

[tool.pytest.ini_options]
testpaths = ["tests"]
